--- a/404.md
+++ b/404.md
@@ -5,6 +5,7 @@ permalink: /404.html
 
 ## {% include icon.html icon="fa-solid fa-heart-crack" %} Page Not Found
 
+We're sorry, this looks like its our fault...
 Try searching the whole site for the content you want:
 {:.center}
 
